--- a/TestOvercome/app/src/main/res/values/colors.xml
+++ b/TestOvercome/app/src/main/res/values/colors.xml
@@ -7,4 +7,9 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="gray">#DADADA</color>
+
+    <color name="low">#008F39</color>
+    <color name="medium">#FFDF00</color>
+    <color name="high">#CE281F</color>
 </resources>
